src/test/ui/str/str-array-assignment.stderr
error[E0308]: if and else have incompatible types
  --> $DIR/str-array-assignment.rs:3:37
   |
LL |   let t = if true { s[..2] } else { s };
   |                     ------          ^ expected str, found &str
   |                     |
   |                     expected because of this
   |
   = note: expected type `str`
              found type `&str`

error[E0308]: mismatched types
  --> $DIR/str-array-assignment.rs:5:27
   |
LL |   let u: &str = if true { s[..2] } else { s };
   |                           ^^^^^^
   |                           |
   |                           expected &str, found str
   |                           help: consider borrowing here: `&s[..2]`
   |
   = note: expected type `&str`
              found type `str`

error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/str-array-assignment.rs:7:7
   |
LL |   let v = s[..2];
   |       ^   ------ help: consider borrowing here: `&s[..2]`
   |       |
   |       doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `str`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = note: all local variables must have a statically known size
   = help: unsized locals are gated as an unstable feature

error[E0308]: mismatched types
  --> $DIR/str-array-assignment.rs:9:17
   |
LL |   let w: &str = s[..2];
   |                 ^^^^^^
   |                 |
   |                 expected &str, found str
   |                 help: consider borrowing here: `&s[..2]`
   |
   = note: expected type `&str`
              found type `str`

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
